fix: h3 not showing up (#4520)
## Description

Fix h3 not showing up in the docs

## Related Issue(s)

This address the issue https://github.com/mastra-ai/mastra/issues/4462

## Type of Change

- [x] Bug fix (non-breaking change that fixes an issue)
- [ ] New feature (non-breaking change that adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to change)
- [ ] Documentation update
- [ ] Code refactoring
- [ ] Performance improvement
- [ ] Test update

## Checklist

- [x] I have made corresponding changes to the documentation (if
applicable)
- [x] I have added tests that prove my fix is effective or that my
feature works

--- a/docs/src/app/globals.css
+++ b/docs/src/app/globals.css
@@ -409,10 +409,13 @@ pre code.nextra-code:not([class*="twoslash-"]) > span[data-highlighted-line] {
     background-color: var(--color-surface-5);
   }
 }
-main h3:has(+ div.nextra-code) {
+
+h3#npx,
+h3#npm,
+h3#yarn,
+h3#pnpm {
   display: none;
 }
-
 .nextra-code {
   white-space: nowrap;
 }
